Bug 1146304 - Touch slider bar or tap forward button, the video got stuck 1s then resume playing. r=cpearce